// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownLight /> should match the snapshots 1`] = `
<DocumentFragment>
  .FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c3 {
  display: inline-block;
  pointer-events: none;
  width: 24px;
}

.c2 {
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  -webkit-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  font-size: 16px;
  margin-top: 8px;
  padding: 8px 16px;
  background-color: #ffffff;
  color: #424242;
  border: 2px solid #999999;
}

.c2:disabled {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
  box-shadow: none;
  cursor: not-allowed;
}

.c2:hover:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c2:focus:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c0 {
  position: relative;
}

.c1 {
  margin-top: 8px;
  background-color: #ffffff;
}

<div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="c0"
    >
      <input
        aria-label="selecione uma opção"
        class="TextInput-module__text-input___VCylJ c1"
        hidden=""
        name=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="abrir lista de itens"
        class="c2"
        id=""
      >
        Select an option
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="m7 10 5 5 5-5z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<DropdownLight /> should match the snapshots 2`] = `
<DocumentFragment>
  .FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c3 {
  display: inline-block;
  pointer-events: none;
  width: 24px;
}

.c2 {
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  -webkit-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  font-size: 16px;
  margin-top: 8px;
  padding: 8px 16px;
  background-color: #ffffff;
  color: #424242;
  border: 2px solid #999999;
}

.c2:disabled {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
  box-shadow: none;
  cursor: not-allowed;
}

.c2:hover:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c2:focus:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c0 {
  position: relative;
}

.c1 {
  margin-top: 8px;
  background-color: #ffffff;
}

<div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="c0"
    >
      <input
        aria-label="selecione uma opção"
        class="TextInput-module__text-input___VCylJ c1"
        hidden=""
        name="dropdown-name"
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="abrir lista de itens"
        class="c2"
        id=""
      >
        Select an option
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="m7 10 5 5 5-5z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<DropdownLight /> should match the snapshots 3`] = `
<DocumentFragment>
  .FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.InputLabel-module__input-label___u-ovg {
  color: inherit;
  display: block;
  font-weight: 700;
  margin: var(--qtm-spacing-xsmall) 0 0;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c1 {
  color: #ec584e;
}

.c4 {
  display: inline-block;
  pointer-events: none;
  width: 24px;
}

.c3 {
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  -webkit-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  font-size: 16px;
  margin-top: 8px;
  padding: 8px 16px;
  background-color: #ffffff;
  color: #424242;
  border: 2px solid #999999;
}

.c3:disabled {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
  box-shadow: none;
  cursor: not-allowed;
}

.c3:hover:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c3:focus:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c0 {
  position: relative;
}

.c2 {
  margin-top: 8px;
  background-color: #ffffff;
}

<div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="c0"
    >
      <label
        class="InputLabel-module__input-label___u-ovg"
        error=""
      >
        some text
        <em
          aria-label="campo obrigatório"
          class="c1"
        >
          *
        </em>
      </label>
      <input
        aria-label="selecione uma opção"
        class="TextInput-module__text-input___VCylJ c2"
        hidden=""
        name=""
        required=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="abrir lista de itens"
        class="c3"
        id=""
      >
        Select an option
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="m7 10 5 5 5-5z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<DropdownLight /> should match the snapshots 4`] = `
<DocumentFragment>
  .ErrorMessage-module__error-message___MWbU- {
  color: var(--qtm-colors-error-900);
  cursor: text;
  display: block;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
  line-height: normal;
  margin-top: var(--qtm-spacing-xsmall);
}

.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c3 {
  display: inline-block;
  pointer-events: none;
  width: 24px;
}

.c2 {
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  -webkit-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  font-size: 16px;
  margin-top: 8px;
  padding: 8px 16px;
  background-color: #ffffff;
  color: #424242;
  border: 2px solid #e91b0c;
}

.c2:disabled {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
  box-shadow: none;
  cursor: not-allowed;
}

.c2:hover:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c2:focus:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c0 {
  position: relative;
}

.c1 {
  margin-top: 8px;
  background-color: #ffffff;
}

<div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="c0"
    >
      <input
        aria-label="selecione uma opção"
        class="TextInput-module__text-input___VCylJ c1"
        hidden=""
        name=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="abrir lista de itens"
        class="c2"
        id=""
      >
        Select an option
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="m7 10 5 5 5-5z"
          />
        </svg>
      </button>
    </div>
    <span
      class="ErrorMessage-module__error-message___MWbU-"
      theme="[object Object]"
    >
      Some error text...
    </span>
  </div>
</DocumentFragment>
`;

exports[`<DropdownLight /> should match the snapshots 5`] = `
<DocumentFragment>
  .ErrorMessage-module__error-message___MWbU- {
  color: var(--qtm-colors-error-900);
  cursor: text;
  display: block;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
  line-height: normal;
  margin-top: var(--qtm-spacing-xsmall);
}

.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.HelperText-module__helper-text___e4Vp- {
  color: inherit!important;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c3 {
  display: inline-block;
  pointer-events: none;
  width: 24px;
}

.c2 {
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  -webkit-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  font-size: 16px;
  margin-top: 8px;
  padding: 8px 16px;
  background-color: #ffffff;
  color: #424242;
  border: 2px solid #999999;
}

.c2:disabled {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
  box-shadow: none;
  cursor: not-allowed;
}

.c2:hover:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c2:focus:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c0 {
  position: relative;
}

.c1 {
  margin-top: 8px;
  background-color: #ffffff;
}

<div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="c0"
    >
      <input
        aria-label="selecione uma opção"
        class="TextInput-module__text-input___VCylJ c1"
        hidden=""
        name=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="abrir lista de itens"
        class="c2"
        id=""
      >
        Select an option
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="m7 10 5 5 5-5z"
          />
        </svg>
      </button>
    </div>
    <span
      class="ErrorMessage-module__error-message___MWbU- HelperText-module__helper-text___e4Vp-"
    >
      'this is a helper text'
    </span>
  </div>
</DocumentFragment>
`;

exports[`<DropdownLight /> should match the snapshots 6`] = `
<DocumentFragment>
  .FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c3 {
  display: inline-block;
  pointer-events: none;
  width: 24px;
}

.c2 {
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  -webkit-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  font-size: 16px;
  margin-top: 8px;
  padding: 8px 16px;
  background-color: #ffffff;
  color: #424242;
  border: 2px solid #999999;
}

.c2:disabled {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
  box-shadow: none;
  cursor: not-allowed;
}

.c2:hover:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c2:focus:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c0 {
  position: relative;
}

.c1 {
  margin-top: 8px;
  background-color: #ffffff;
}

<div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="c0"
    >
      <input
        aria-label="selecione uma opção"
        class="TextInput-module__text-input___VCylJ c1"
        hidden=""
        name=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="abrir lista de itens"
        class="c2"
        id=""
      >
        this is a input placeholder
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="m7 10 5 5 5-5z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<DropdownLight /> should match the snapshots 7`] = `
<DocumentFragment>
  .FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c3 {
  display: inline-block;
  pointer-events: none;
  width: 24px;
}

.c2 {
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  -webkit-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  font-size: 16px;
  margin-top: 8px;
  padding: 8px 16px;
  background-color: #ffffff;
  color: #424242;
  border: 2px solid #999999;
}

.c2:disabled {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
  box-shadow: none;
  cursor: not-allowed;
}

.c2:hover:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c2:focus:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c0 {
  position: relative;
}

.c1 {
  margin-top: 8px;
  background-color: #ffffff;
}

<div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="c0"
    >
      <input
        aria-label="selecione uma opção"
        class="TextInput-module__text-input___VCylJ c1"
        hidden=""
        name=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="abrir lista de itens"
        class="c2"
        disabled=""
        id=""
      >
        Select an option
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="m7 10 5 5 5-5z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<DropdownLight /> should match the snapshots 8`] = `
<DocumentFragment>
  .FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c3 {
  display: inline-block;
  pointer-events: none;
  width: 24px;
}

.c2 {
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  -webkit-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  font-size: 16px;
  margin-top: 8px;
  padding: 8px 16px;
  background-color: #ffffff;
  color: #424242;
  border: 2px solid #999999;
}

.c2:disabled {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
  box-shadow: none;
  cursor: not-allowed;
}

.c2:hover:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c2:focus:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c0 {
  position: relative;
}

.c1 {
  margin-top: 8px;
  background-color: #ffffff;
}

<div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="c0"
    >
      <input
        aria-label="selecione uma opção"
        class="TextInput-module__text-input___VCylJ c1"
        hidden=""
        name=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="abrir lista de itens"
        class="c2"
        id=""
      >
        Select an option
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="m7 10 5 5 5-5z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
